--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+    
 }
 header{
     background-color: black;
@@ -13,7 +15,8 @@ header{
     height: 40px;
     font-size: 13px;
     align-items: center;
-    text-decoration: underline;
+
+    
 }
 #menu{
     width: 20px;
@@ -38,27 +41,30 @@ h4{
     background-color: rgb(243, 242, 241);
     margin: 25px;
     margin-right: 80px;
-    text-indent: 30px;
+    text-indent: 35px;
 }
 #Log{
     height: 40px;
-    width: 300px;
+    width: 200px;
     border: none;
     border-radius: 50px;
-    margin: 25px;
+    margin-top: 25px;
+    margin-right: 15px;
     font-size: 15px;
-    text-indent: 20px;
+    text-indent: 40px;
 
 }
 #like{
     width: 25px;
     height: 20px;
-    margin-top: 30px;
+    margin-top: 35px;
 }
 #bag{
     width: 20px;
     height: 20px;
-    margin: 30px;
+    margin-top: 35px;
+    margin-left: 15px;
+    margin-right: 30px;
 }
 .main{
     display: flex;
@@ -67,44 +73,48 @@ h4{
     display: flex;
     margin-left: 80px;
     margin-top: 50px;
-    text-decoration: underline;
+    margin-right: -100px;
+    font-size: 15px;
+    
 }
 #yo{
     font-size: 15px;
+    font-weight: 100;
     
 }
 #truck{
     width: 50px;
     height: 40px;
-    margin-top: -40px;
+    margin-top: -42px;
     margin-right: 0;
 }
 #store{
     width: 30px;
     height: 30px;
     margin-top: -38px;
+    margin-right: 10px;
 }
 #ya{
-    margin-right: 200px;
+    margin-right: 250px;
 }
 .da{
     margin-left: 0;
     margin-right: 30px;
 }
 .hi{
-    margin-left: 120px;
+    margin-left: 90px;
     margin-top: 40px;
-    display: inline-block;
+    display: ;
     flex-wrap: wrap;
     
 
 }
 .hi>img{
-    height: 40%;
-    width: 40%;
+    height: 600px;
+    width: 300px;
 }
 .hii{
-    display: inline-block;
+    display: flex;
     flex-wrap: wrap;
     
 }
@@ -114,7 +124,286 @@ h4{
 }
 .dada{
     display: flex;
-    width: 50%;
-    height: 50%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-top: 40px;
+    
 }
+.dada1{
+    margin-top: 40px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+#elo{
+    
+    display: flex;
+    
+}
+#img1{
+    width: 560px;
+    height: 730px;
+    margin: 0 30px 0 30px;
+}
+#img2{
+    width: 300px;
+    height: 300px;
+    margin: 0 0 30px;
+}
+#img3{
+    width: 300px;
+    height: 400px;
+    margin-left: 30px;
+    
+}
+#img4{
+    width: 300px;
+
+}
+#img5{
+    width: 300px;
+    height: 300px;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+#cam{
+    width: 25px;
+    height: 25px;
+    position: relative;
+    right: 125px;
+    top: 33px;
+}
+#magni{
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: 55px;
+    top: 35px;
+}
+#admin{
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: 37px;
+    left: 35px;
+}
+#card{
+    width: 30px;
+    height: 30px;
+    margin: 10PX;
+}
+
+hr{
+    border-color: rgb(233, 230, 230);
+    margin-right: 200px;
+    margin-left: 100px;
+    
+}
+#gym{
+    margin-top: 40px;
+}
+#yup{
+    margin-left: 0px;
+    margin-right: 100px;
+}
+.oye:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+#uf:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+#uff:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.no-border-logo {
+    border: none;
+    margin-left: 7px;
+}
+
+.total {
+    display: flex;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+}
+
+.right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    
+    
+}
+
+.main {
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+    font-size: 13px;
+    color: rgb(71, 71, 71);
+    margin-right: 50px;
+}
+
+.fifth {
+    margin-right: 0px;
+}
+
+.bottom {
+    display: flex;
+}
+
+#bottom-1st {
+    margin-right: 900px;
+}
+
+.bottom-text {
+    font-size: 13px;
+}
+
+.second-btn {
+    display: flex;
+    align-items: center;
+    background-color: #F5F5F5;
+    color: black;
+    width: 180px;
+    margin-top: 250px;
+    margin-left: 40px;
+     
+    font-size: 15px;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-around;
+}
+.black-img{
+    cursor: pointer;
+}
+
+
+.lined {
+    text-decoration: underline;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.top {
+    color: black;
+}
+
+.top:hover {
+    text-decoration: none;
+}
+
+.big-para:hover {
+    text-decoration: none;
+}
+
+button {
+    height: 40px;
+    width: 100px;
+    color: white;
+    background-color: black;
+    border-radius: 25px;
+}
+
+.first {
+    width: 300px;
+}
+
+.first-1 {
+    margin-bottom: 50px;
+}
+
+svg {
+    border: solid 1px grey;
+    border-radius: 50%;
+    padding: 7px;
+    color: black;
+}
+
+hr {
+    color: black;
+    width: 100%;
+    height: 1px;
+}
+
+li:hover {
+    text-decoration: underline;
+}
+
+p:hover {
+    text-decoration: underline;
+}
+
+svg:hover {
+    border: solid 1px black;
+    cursor: pointer;
+}
+
+#black-img:hover {
+    background-color: grey;
+}
+
+#menulogo:hover {
+    background-color: grey;
+}
+
+.website{
+    display: flex;
+    flex-direction: column;
+}
+.header{
+    display: flex;
+}
+.black-head{
+    background-color: black;
+}
+footer{
+    margin-left: 100px;
+    
+}
+.second{
+    margin-left: 50px;
+}
+.third{
+    margin-left: 50px;
+}
+.fourth{
+    margin-left: 50px;
+}
+#search:hover{
+    background-color: rgb(215, 212, 212);
+
+}
+#Log:hover{
+    background-color: rgb(215, 212, 212);
+}
+#no{
+    border: #F5F5F5;
+}
+.second-btn:hover{
+    border: 3px solid black;
+    cursor: pointer;
+
+}
+
+.rt{
+    position: fixed;
+}
+#ikea{
+    margin-left: 120px;
+}
+    
+
 
